<resources>
    <string name="app_name">MyParking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Buscar</string>

    <string name="btn_accept">Aceptar</string>
    <string name="btn_more_info">Más Info</string>
    <string name="description_title_dialog">Qué significa cada icono?</string>

    <!-- Settings -->
    <string name="parking_preferences">Aparcamiento Preferencias</string>
    <string name="turist_preferences">Turismo Preferencias</string>

    <string name="parking_title_screen_preference">Información Aparcamiento</string>
    <string name="summary_parking_preference">Configurar puntos de Aparcamiento</string>

    <string name="turist_info_title_screen_preference">Información turística</string>
    <string name="summary_turist_info_preference">Configurar puntos de información turística</string>

    <string name="turist_info_op_1">Parques y centros de ocio</string>
    <string name="turist_info_op_2">Instalaciones culturales</string>
    <string name="turist_info_op_3">Edificios y monumentos</string>
    <string name="turist_info_op_4">Parques y jardines</string>
    <string name="turist_info_op_5">Servicios</string>

    <!-- Home Fragment -->
    <string name="btn_settings">Preferencias</string>
    <string name="btn_map">Ver mapa</string>
    <string name="btn_list">Ver lista</string>
    <string name="btn_close">Cerca de Mí</string>
    <string name="btn_poi">Puntos de Interes</string>
    <string name="btn_about">¿Quién Somos?</string>

    <!-- Global -->
    <string name="bitbotic">Bitbotic</string>

</resources>
